--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--引入表格样式-->
   <link rel="stylesheet" href="https://unpkg.com/umy-ui@1.1.6/lib/theme-chalk/index.css">
   <link rel="stylesheet" href="" id="themeStyle">
-  <script src="/static/config.js"></script>
+  <!-- <script src="/static/config.js"></script> -->
 
 </head>
 
