--- a/index.html
+++ b/index.html
@@ -13,13 +13,10 @@
   <!--引入表格样式-->
   <link rel="stylesheet" href="https://unpkg.com/umy-ui@1.1.6/lib/theme-chalk/index.css">
   <link rel="stylesheet" href="" id="themeStyle">
-  <!-- <script src="/static/config.js"></script> -->
-
+  <script src="./static/config.js"></script>
 </head>
 
-<body class="dx-viewport">
-
-
+<body>
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
