--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>PMP答题情况</title>
   <!-- <link id="iconfontLinkId" rel="stylesheet" href="//at.alicdn.com/t/c/font_1791066_csgvwyuupi.css"> -->
-  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+  <!-- <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"> -->
   <!--引入表格样式-->
-  <link rel="stylesheet" href="https://unpkg.com/umy-ui@1.1.6/lib/theme-chalk/index.css">
+  <!-- <link rel="stylesheet" href="https://unpkg.com/umy-ui@1.1.6/lib/theme-chalk/index.css"> -->
   <link rel="stylesheet" href="" id="themeStyle">
   <script src="./static/config.js"></script>
 </head>
